# cheat-sheet-for-kokkos

./: .gitignore  .latexmkrc  BUILD.md  CONTRIBUTING.md  Dockerfile  LICENCE  Makefile  PRINT.md  README.md  VERSION  cheat_sheet_kokkos.cls  convert.sh  generate_patch.sh  install.md  install.tex  kokkos_cheat_sheet.md  personna.md  pyproject.toml  requirements.txt  terminology.md  terminology.tex  typos.toml  utilization.md  utilization.tex
.github/workflows/: spelling.yml
cheat_sheets/: install.md  utilization.md
configs/: print.yaml
filters/: print.py
images/: README.md
kokkos_pygments/: __init__.py
patches/print/: 4.2.0.20240227  install.tex.diff  terminology.tex.diff  utilization.tex.diff
scripts/: convert.sh  generate_patch.sh
styles/after_body/: print.tex
styles/before_body/: print.tex
styles/header/: print.tex
templates/: print.tex
